Fix collapsed navbar styles

--- a/apuniverse/static/css/apuniverse1.css
+++ b/apuniverse/static/css/apuniverse1.css
@@ -378,7 +378,6 @@ input:focus, textarea:focus {
 	box-shadow: inset 0 0 5px #FFf,
 							0 0 5px #989695;
 }
-
 .long-title {
 	font-size: 0.7em;
 	line-height: 0.7em;
@@ -476,15 +475,15 @@ input:focus, textarea:focus {
 		display: none;
 		position: relative;
 		top: 0.2em;
-		border: 5px solid #ffcc99;
 		text-align: right;
 	}
 
 	.nav-main li, .nav-main ul li:first-child, .nav-main ul li:last-child {
 		text-align: center;
 		width: 33.3333333333333%;
+		border: 0.1em solid white;
 		line-height: 1.5em;
-		border: 1px solid #d77f1a;
+		background-color: #ffcc99;
 		box-sizing: border-box;
 	}
 
